--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+
+body {
+  margin: 0;
+  font-family: "Roboto Mono", sans-serif;
+  background-color: #020e18;
+}
